fixed spacing issue on smaller laptop screens

--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ h6 {
 }
 
 h1 {
-  font-size: clamp(2.5rem, 5vw, 3.5rem);
+  font-size: clamp(2rem, 8vw, 6rem);
   letter-spacing: -0.05em;
 }
 
